--- a/ct/src/css/home.css
+++ b/ct/src/css/home.css
@@ -11,15 +11,35 @@ h1{
     padding: 30px;
     
 }
-h2{
-    font-family: 'Inter', sans-serif;
-    padding:10px;
-    font-weight:600;
+h2 {
+    font-family:'Inter', sans-serif;
+    position: relative;
+    font-size: 30px;
+    z-index: 1;
+    overflow: hidden;
+    text-align: center;
 }
+h2:before, h2:after {
+    position: absolute;
+    top: 51%;
+    overflow: hidden;
+    width: 50%;
+    height: 1px;
+    content: '\a0';
+    background-color: rgb(0, 0, 0);
+}
+h2:before {
+    margin-left: -50%;
+}
+
 
 .logo {
     height:130px;
     width:130px;
+    padding:20px;
+}
+
+.mandate{
     padding:20px;
 }
 
@@ -66,9 +86,14 @@ h2{
   .products{
       width:80%;
       margin:auto;
-      background:gray;
+      /* background:rgb(204, 204, 204); */
       padding-top:30px;
+      padding-left:150px;
   }
+  .product{
+      align-self: center;
+  }
+
 .mm-container {
     height: 30px;
     background: #af0b1c;
@@ -79,4 +104,8 @@ h2{
 
 .content{
     padding:30px;
+}
+.contact{
+    text-align: center;
+    padding-top:70px;
 }
