--- a/ct/src/css/login.css
+++ b/ct/src/css/login.css
@@ -1,22 +1,32 @@
 .Login{
     width:100%;
+    height:100%;
 }
 
 p{
     font-family: 'Inter', sans-serif;
+    font-weight:200 !important;
 }
 h1{
     font-family:'Inter', sans-serif;
-    font-weight:600;
+    font-weight:400 !important;
     padding: 30px;
     
 }
 h2{
     font-family: 'Inter', sans-serif;
     padding:10px;
-    font-weight:600;
-}
+    font-weight:200 !important;
 
+}
+h3{
+    font-family: 'Inter', sans-serif;
+    font-size:30px !important;
+    padding:10px;
+    font-weight:200 !important;
+    text-align: center;
+
+}
 .logo {
     height:130px;
     width:130px;
