--- a/ct/src/css/home.css
+++ b/ct/src/css/home.css
@@ -1,109 +1,24 @@
-.Login{
+.Home{
     width:100%;
-}
-
-p{
-    font-family: 'Inter', sans-serif;
-}
-h1{
-    font-family:'Inter', sans-serif;
-    font-weight:600;
-    padding: 30px;
-    
-}
-h2 {
-    font-family:'Inter', sans-serif;
-    position: relative;
-    font-size: 30px;
-    z-index: 1;
-    overflow: hidden;
-    text-align: center;
-}
-h2:before, h2:after {
-    position: absolute;
-    top: 51%;
-    overflow: hidden;
-    width: 50%;
-    height: 1px;
-    content: '\a0';
-    background-color: rgb(0, 0, 0);
-}
-h2:before {
-    margin-left: -50%;
-}
-
-
-.logo {
-    height:130px;
-    width:130px;
-    padding:20px;
+    height:100vh;
 }
 
 .mandate{
     padding:20px;
 }
 
-.button{
-    background-color: #af0b1c;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 20px;
-}
-
-.button:hover {
-    opacity: 0.8;
-  }
-
-.input{
-    width:100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    border-radius: 25px;
-  }
-
-  .inputrow{
-    width: 100%;
-    margin: 8px 0;
-  }
-
-  .info{
-      width:60%;
-      margin:auto;
-      text-align:center;
-  }
-  
   .img{
       height:20em;
   }
 
   .products{
-      width:80%;
-      margin:auto;
+      width:58%;
+      margin: auto;
       /* background:rgb(204, 204, 204); */
       padding-top:30px;
-      padding-left:150px;
   }
-  .product{
-      align-self: center;
-  }
-
-.mm-container {
-    height: 30px;
-    background: #af0b1c;
-    -moz-box-shadow: 0 3px 0 rgba(0,0,0,0.15);
-    box-shadow: 0 3px 0 rgba(0,0,0,0.15);
-    z-index: 100;
-}
 
 .content{
-    padding:30px;
 }
 .contact{
     text-align: center;
